[package]
name = "raspy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
futures-util = { version = "0.3.29", features = ["futures-io", "tokio-io"] }
indicatif = { version = "0.17.7", features = ["tokio", "futures"] }
itertools = "0.12.0"
matchit = "0.7.3"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["stream"] }
scraper = "0.18.1"
tokio = { version = "1.34.0", features = ["full"] }
url = "2.4.1"
